--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-venv/
+# Python
 __pycache__/
-.env
+*.pyc
+*.pyo
+*.pyd
+
+# Entornos virtuales
+venv/
+env/
+ENV/
+.venv/
+.ENV/
+
+# Configs locales
+*.env
+*.env.*
+*.local
+.DS_Store
+
+# Archivos de logs
+*.log
+
+# Bases de datos locales (ejemplo si tienes sqlite)
+*.sqlite3
+*.db
+
+# VSCode settings
+.vscode/
+
+# Archivos de pruebas
+htmlcov/
+.coverage
+.tox/
+.pytest_cache/
